--- a/src/one/Pages/Index.razor
+++ b/src/one/Pages/Index.razor
@@ -1,12 +1,3 @@
-@page "/"
+﻿@page "/"
 
-<body>
-  <div class='lower'>
-    <div class='content'>
-      <img class='plan' src='assets/Plan_2A.svg'>
-      <form method="get" action="Bot.exe">
-        <button class='nrj' type="submit">NRJ Air Bot Download</button>
-      </form>
-    </div>
-  </div>
-</body>
+<h1>Maske One</h1>
